--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -27,6 +27,8 @@ html{
        background-size:cover;
        transition: background-image 0.5s;
 }
+sighting-lable{
+}
 .navigation{
     margin: 0 auto;
 }
@@ -36,10 +38,15 @@ html{
 }
 
 .superpower-label {
-    margin-left: 40%;
-    font-size: 1.5em;
+    margin-left: 20%;
+    font-size: 1.1em;
 }
-
+.datetimepicker{
+    margin-left:28%;
+}
+.background-form{
+    padding-bottom:4%;
+}
 .superpower-list {
     width: 100%;
     height: 100%;
@@ -196,7 +203,8 @@ a:link,a:visited{
 .sighting-ticker{
     display:block;
     background:  rgba(195, 29, 16,0.9);
-    border-radius: 5px;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
     border: 3px solid RGB: (195, 29, 16);
     text-align:center;
     padding-top:2px;
@@ -204,6 +212,21 @@ a:link,a:visited{
 
 
 }
+.headingTitle:hover{
+    margin-left:30px;
+}
+.sighting-ticker:hover{
+    display:block;
+    background:  rgba(195, 29, 16,1);
+
+    border: 3px solid RGB: (195, 29, 16);
+    text-align:center;
+    padding-top:2px;
+    padding-bottom:2px;
+
+
+}
+
 .recent-sighting-header{
     margin: auto;
       width: 50%;
