--- a/src/main/resources/templates/editlocation.html
+++ b/src/main/resources/templates/editlocation.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
     <link th:href="@{/css/main.css}" href="../static/css/main.css"
@@ -48,7 +49,7 @@
 
 
     </header>
-    <div class="container-full-width row">
+    <div id = "app" class="container-full-width row">
         <div class="color-overlay-pages"></div>
         <div class="col-4">
 
@@ -128,5 +129,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/src/hero.js}"></script>
+
 </body>
 </html>
