--- a/src/main/resources/templates/editsuperhero.html
+++ b/src/main/resources/templates/editsuperhero.html
@@ -6,109 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
     <link th:href="@{/css/main.css}" href="../static/css/main.css"
           rel="stylesheet" type="text/css" media="screen"/>
 
-    <title>Super Heroes</title>
+    <title>Hero Sightings</title>
 </head>
 <body class="background-image">
-<h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Super Powers</h1>
-<header>
 
-    <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
-        <li class="nav-item active">
-            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/organization/display">Organizations</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/location/display">Locations</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
-        </li>
+<ul class="navbar navbar-expand-lg  nav-fill nav-pills col-md-12 navigation-bar">
+    <li class="nav-item active navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/organization/display">Organizations</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/location/display">Locations</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
+    </li>
 
-    </ul>
+</ul>
+<h1 id="" class="title-headers text-center">Super Heroes</h1>
+<div class="body-container">
 
+    <div class="container-full-width row">
+        <div class="color-overlay-pages"></div>
+        <div class="col-4">
 
-    </div>
-    </nav>
-</header>
-<div class="container-full-width row">
-    <div class="col-4">
+            <h3 class="location-header">All Super Heroes</h3>
+            <div th:each="hero : ${heroes}">
+                <div class = "col-12 location-title">
+                    <h5 th:value= "${hero.id}" class=" power edit" th:text="${hero.name}"></h5>
+                    <div class="buttons">
+                        <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editsuperhero/update(id=${hero.id})}" >Edit</a></button>
+                        <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/superhero/delete(id=${hero.id})}" >Delete</a></button>
 
-        <h3>All Super Heroes</h3>
-        <table class="table">
-            <thead>
-            <tr>
+                    </div>
+                </div>
 
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="hero : ${heroes}" class="hero">
+            </div>
 
-                <td th:value= "${hero.id}" class="powerGroup" th:text="${hero.name}"></td>
-                <td> <a href="#" th:href="@{/HeroSighting/editsuperhero/update(id=${hero.id})} " class="editIcon">Edit</a></td>
-                <td> <a href="#" th:href="@{/HeroSighting/superhero/delete(id=${hero.id})}" class="deleteIcon">Delete</a></td>
-            </tr>
-            </tbody>
-        </table>
-        <!--<ul >-->
-        <!--<li  class = "hero" th:value= "${hero.id}" th:each = "hero : ${allHeroes}">-->
-        <!--<h5 class="powerGroup" th:text= "${hero.name}" ></h5><i class="editIcon far fa-edit"></i><i class="deleteIcon fas fa-times-circle"></i>-->
-        <!--</li>-->
-        <!--</ul>-->
-    </div>
-    <div class="col-8">
+        
+        </div>
         <div class="col-8">
+            <div class="col-12">
 
-            <!--<p th:text = "${singlepower}"></p>-->
-            <!-- Example single danger button -->
-            <div >
-                <form method="post">
-                    <h4 class="newPower">Edit Super Hero</h4>
-                    <div class="custom-control custom-radio">
-                        <div class="radio">
-                            <input type="radio" value="false" class=" custom-control-input" id="hero" name="hero" checked>
-                            <label class="custom-control-label" for="hero">Hero</label>
+
+                <div >
+                    <form class="form-background" method="post" th:object="${hero}">
+                        <h4 class="page-title">Edit Hero</h4>
+                        <div class="custom-control custom-radio">
+
+                            <div class="radio">
+                                <input type="radio" th:value="${hero.id}"   class=" custom-control-input" id="hero" name="villain">
+                                <label class="custom-control-label" for="hero">Villain</label>
+                            </div>
                         </div>
-                        <div class="radio">
-                            <input type="radio" value="true" class=" custom-control-input" id="villain" name="villain">
-                            <label class="custom-control-label" for="villain">Villain</label>
-                        </div>
+                        <div class="form-group">
+                        <input type="text" class="input-style" id="name" name="name" th:value="${hero.name}">
                     </div>
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" th:value="${hero.name}">
-                        <small id="coolName" class="form-text text-muted">Be Sure to make it a cool one</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="herodescription">Description</label>
-                        <input type="text" class="form-control" id="herodescription" name="description" th:value="${hero.description}">
+                        <input type="text" class="input-style" id="herodescription" name="description" th:value="${hero.description}">
                     </div>
 
-                    <!--<div class="">-->
-                    <!--<div class="">-->
-                    <!--<button th:each="power :${allPowers}" onclick="" class="powerChoice btn-danger col-4" th:value= "${power.id}" th:text= "${power.type}" href="#"></button>-->
-
-                    <!--</div>-->
-
-                    <!--</div>-->
                     <div class="form-group row">
-                        <label for="powers" class="col-3 col-form-label">
-                            Super Powers</label>
-                        <div class="col-9">
+                        <label for="powers" class="superpower-label">
+                            Select Super Powers</label>
+                        <div class="col-7">
                             <select multiple id="powers" name="superpower"
-                                    class="form-control" >
+                                    class="superpower-list" >
                                 <option th:each="power : ${powers}"
                                         th:value="${power.id}"
                                         th:text="${power.type}"
@@ -117,38 +96,18 @@
                             </select>
                         </div>
                         <input type="hidden" name="id" th:value="${hero.id}"/>
-                        <button type="submit" class="btn btn-primary">Update</button>
                     </div>
 
-                    <!--<div id="popUp" style="display:none">-->
-                    <!--<input type="checkbox" th:each="power :${allPowers}" class="power" th:value= "${power.id}" th:text= "${power.type}" href="#">-->
-                    <!--</div>-->
-                    <!--<button type="button" id="powerChoice" onclick="openNav()">Choose Powers</button>-->
+                        <div>
+                            <button type="submit" class=" location-button ">Update Hero</button>
+
+                        </div>
                 </form>
-                <ul id="list">
 
-                </ul>
             </div>
-            <!--<div class="btn-group col-3">-->
-            <!--&lt;!&ndash;<div class="dropdown">&ndash;&gt;-->
-            <!--&lt;!&ndash;<button type="button" class="btn btn-Secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&ndash;&gt;-->
-            <!--&lt;!&ndash;Choose a Power&ndash;&gt;-->
-            <!--&lt;!&ndash;</button>&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="dropdown-menu"   >&ndash;&gt;-->
 
-            <!--&lt;!&ndash;<a th:each="power :${allPowers}" class="power dropdown-item" th:value= "${power.id}" th:text= "${power.type}" href="#"></a>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-
-            <!--</div>-->
-            <!--<input type="text" class="form-control message-box col-8" id="message-input" readonly>-->
         </div>
-        <div class="row col-12">
-            <div id="icons">
-                <!--<h2 class="col-12">View a Super Power</h2>-->
-            </div>
-        </div>
+
     </div>
 
 </div>
