--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
@@ -48,23 +49,23 @@
 
 
 </header>
-<div class="container-full-width row">
+<div id="app" class="container-full-width row">
     <div class="color-overlay-pages"></div>
     <div class="col-4">
 
         <h3 class="location-header">All Locations</h3>
-        <div th:each="location : ${locations}">
-            <div class = "col-12 location-title">
+
+            <div th:each="location : ${locations} "class = "col-12 location-title">
                 <h5 th:value= "${location.id}" class=" power edit" th:text="${location.name}"></h5>
-                <div class="buttons">
-                    <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editlocation/update(id=${location.id})}" >Edit</a></button>
-                    <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/location/delete(id=${location.id})}" >Delete</a></button>
+                <div class="buttons" >
+                    <button  class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editlocation/update(id=${location.id})}" >Edit</a></button>
+                    <button  class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/location/delete(id=${location.id})}" >Delete</a></button>
 
                 </div>
             </div>
 
 
-        </div>
+
     </div>
     <div class="col-8">
         <div class="col-12">
@@ -108,11 +109,12 @@
                     <div>
                         <button type="submit" class=" location-button ">Add location</button>
 
-                    </div>
-                    <!--<div id="popUp" style="display:none">-->
-                    <!--<input type="checkbox" th:each="power :${allPowers}" class="power" th:value= "${power.id}" th:text= "${power.type}" href="#">-->
                     <!--</div>-->
-                    <!--<button type="button" id="powerChoice" onclick="openNav()">Choose Powers</button>-->
+                    <!--<div th:if="${#fields.hasErrors('location.name')}">-->
+                        <!--<p th:each="error : ${#fields.errors('location.name')}" class="alert alert-danger"-->
+                           <!--th:text="${error}"> Bad location name</p>-->
+                    <!--</div>-->
+
                 </form>
 
             </div>
@@ -136,5 +138,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/src/hero.js}"></script>
+
 </body>
 </html>
