--- a/src/main/resources/templates/organization.html
+++ b/src/main/resources/templates/organization.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
     <link th:href="@{/css/main.css}" href="../static/css/main.css"
           rel="stylesheet" type="text/css" media="screen"/>
@@ -14,87 +17,77 @@
     <title>Hero Sightings</title>
 </head>
 <body class="background-image">
-<h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Organizations</h1>
-<header>
 
-    <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
-        <li class="nav-item active">
-            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/organization/display">Organizations</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/location/display">Locations</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
-        </li>
+<ul class="navbar navbar-expand-lg  nav-fill nav-pills col-md-12 navigation-bar">
+    <li class="nav-item active navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/organization/display">Organizations</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/location/display">Locations</a>
+    </li>
+    <li class="nav-item navigation-tabs">
+        <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
+    </li>
 
-    </ul>
+</ul>
+<h1 id="" class="title-headers text-center">Organizations</h1>
+<div class="body-container">
 
 
-    </div>
-    </nav>
-</header>
-<div class="container-full-width row">
-    <div class="col-4">
 
-        <h3>All Organizations</h3>
-        <table class="table">
-            <thead>
-            <tr>
 
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="organization : ${organizations}">
 
-                <td th:value= "${organization.id}" class="team" th:text="${organization.name}"></td>
-                <td> <a href="#" th:href="@{/HeroSighting/editorganization/update(id=${organization.id})} " class="editIcon">Edit</a></td>
-                <td> <a href="#" th:href="@{/HeroSighting/organization/delete(id=${organization.id})}" class="deleteIcon">Delete</a></td>
-            </tr>
-            </tbody>
-        </table>
-        <!---->
+
+
+
+
+    <div class="container-full-width row">
+        <div class="color-overlay-pages"></div>
+        <div class="col-4">
+
+            <h3 class="location-header">All Organizations</h3>
+            <div th:each="organization: ${organizations}">
+                <div class="col-12 location-title">
+                    <h5 th:value = "${organization.id}" class="power edit" th:text="${organization.name}"></h5>
+                    <div class="buttons">
+                        <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editorganization/update(id=${organization.id})}" >Edit</a></button>
+                        <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/organization/delete(id=${organization.id})}" >Delete</a></button>
+                    </div>
+                </div>
+            </div>
+
     </div>
     <div class="col-8">
-        <div class="col-8">
+        <div class="col-12">
 
-            <!--<p th:text = "${singlepower}"></p>-->
-            <!-- Example single danger button -->
+
             <div >
-                <form method="post">
-                    <h4 class="newOrganization">Add Organization</h4>
+                <form class="form-background" method="post">
+                    <h4 class="page-title">Add New Organization</h4>
 
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name">
+                        <input type="text" class="input-style" id="name" name="name" placeholder="Enter Organization Name">
 
                     </div>
                     <div class="form-group">
-                        <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" name="description"  placeholder="Organization description">
+                        <input type="text" class="input-style" id="description" name="description"  placeholder="Organization description">
                     </div>
-                    <!--<div class="">-->
-                    <!--<div class="">-->
-                    <!--<button th:each="power :${allPowers}" onclick="" class="powerChoice btn-danger col-4" th:value= "${power.id}" th:text= "${power.type}" href="#"></button>-->
 
-                    <!--</div>-->
+                    <div class="form-group col-7">
 
-                    <!--</div>-->
-                    <div class="form-group row">
-                        <label for="location" class="col-3 col-form-label">
-                            Headquarters</label>
-                        <div class="col-9">
+                        <label for="members" class="superpower-label">
+                            Select Headquarters</label>
                             <select id="location" name="location"
-                                    class="form-control" placeholder="Location" >
+                                    class="superpower-list" placeholder="Enter Location" >
                                 <option selected>Choose a Location</option>
                                 <option
 
@@ -104,12 +97,13 @@
                                    </option>
                             </select>
                         </div>
-                        <div class="form-group row">
-                        <label for="members" class="col-3 col-form-label">
-                            Super Heroes</label>
-                        <div class="col-9">
+
+
+                        <label for="members" class="superpower-label">
+                            Select Members</label>
+                        <div class="col-7">
                             <select multiple id="members" name="member"
-                                    class="form-control" >
+                                    class="superpower-list" >
                                 <option th:each="member : ${members}"
                                         th:value="${member.id}"
                                         th:text="${member.name}"
@@ -117,37 +111,22 @@
                                     Super Heroes</option>
                             </select>
                         </div>
-                        </div>
 
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add Organization</button>
-                    <!--<div id="popUp" style="display:none">-->
+
+
+                    <div>
+                        <button type="submit" class=" location-button ">Add Organization</button>
+
+                    </div>                    <!--<div id="popUp" style="display:none">-->
                     <!--<input type="checkbox" th:each="power :${allPowers}" class="power" th:value= "${power.id}" th:text= "${power.type}" href="#">-->
                     <!--</div>-->
                     <!--<button type="button" id="powerChoice" onclick="openNav()">Choose Powers</button>-->
                 </form>
 
             </div>
-            <!--<div class="btn-group col-3">-->
-            <!--&lt;!&ndash;<div class="dropdown">&ndash;&gt;-->
-            <!--&lt;!&ndash;<button type="button" class="btn btn-Secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&ndash;&gt;-->
-            <!--&lt;!&ndash;Choose a Power&ndash;&gt;-->
-            <!--&lt;!&ndash;</button>&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="dropdown-menu"   >&ndash;&gt;-->
 
-            <!--&lt;!&ndash;<a th:each="power :${allPowers}" class="power dropdown-item" th:value= "${power.id}" th:text= "${power.type}" href="#"></a>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-
-            <!--</div>-->
-            <!--<input type="text" class="form-control message-box col-8" id="message-input" readonly>-->
         </div>
-        <div class="row col-12">
-            <div id="icons">
-                <!--<h2 class="col-12">View a Super Power</h2>-->
-            </div>
-        </div>
+
     </div>
 
 </div>
