--- a/src/main/resources/templates/superhero.html
+++ b/src/main/resources/templates/superhero.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
@@ -41,14 +42,6 @@
 <h1 id="" class="title-headers text-center">Super Heroes</h1>
 <div class="body-container">
 
-    <header>
-
-
-
-
-
-
-    </header>
     <div class="container-full-width row">
         <div class="color-overlay-pages"></div>
         <div class="col-4">
@@ -58,7 +51,7 @@
                 <div class = "col-12 location-title">
                     <h5 th:value= "${hero.id}" class=" power edit" th:text="${hero.name}"></h5>
                     <div class="buttons">
-                        <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editsuperhero/update(id=${hero.id})}" >Edit</a></button>
+                        <a href="#" th:href="@{/HeroSighting/editsuperhero/update(id=${hero.id})}" ><button class="col-5 btn-success editIcon editing">Edit</button></a>
                         <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/superhero/delete(id=${hero.id})}" >Delete</a></button>
 
                     </div>
@@ -67,7 +60,7 @@
 
             </div>
 
-       \
+
     </div>
     <div class="col-8">
         <div class="col-12">
@@ -108,7 +101,7 @@
 
                     </div>
                     <div>
-                        <button type="submit" class=" location-button ">Add location</button>
+                        <button type="submit" class=" location-button ">Add Hero</button>
 
                     </div>
                         <!--<div id="popUp" style="display:none">-->
