--- a/src/main/resources/templates/superpower.html
+++ b/src/main/resources/templates/superpower.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Righteous|Sarabun|Ubuntu|Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c50d94bbae.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
@@ -48,12 +49,12 @@
 <h3 class="location-header">All Super Powers</h3>
 
     <div th:each="power : ${allPowers}">
-        <div class="col-12 location-title">
-            <h5 th:value= "${power.id}" class="power edit" th:text="${power.type}"></h5>
+        <div class="col-12 location-title" >
+            <h5 th:value= "${power.id}" class="power edit super" th:text="${power.type}"></h5>
 
 
                 <div class="buttons">
-                    <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}" >Edit</a></button>
+                    <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}">Edit</a></button>
                     <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/superpower/delete(id=${power.id})}" >Delete</a></button>
 
                 </div>
@@ -95,14 +96,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 
 <script type="text/javascript" th:src="@{/src/hero.js}"></script>
-<script src = "https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 <script>
-  <!--new Vue({-->
-    <!--el: '.demo',-->
-    <!--data:{-->
-        <!--show: true-->
-    <!--}-->
-<!--});-->
 </script>
 </body>
 </html>
