--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,18 +22,18 @@
     <div class="headings col-5">
         <ul>
             <li class="headingTitle">
-                <a href="/HeroSighting/sighting/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class=" home-title home-sighting">Sighting</span></a></li>
+                <a href="/sighting/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class=" home-title home-sighting">Sighting</span></a></li>
 
             <li class="headingTitle">
-                <a href="/HeroSighting/superhero/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-hero">Super Heroes</span></a></li>
+                <a href="/superhero/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-hero">Super Heroes</span></a></li>
 
             <li class="headingTitle">
-                <a href="/HeroSighting/organization/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-organization">Organizations</span></a></li>
+                <a href="/organization/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-organization">Organizations</span></a></li>
 
             <li class="headingTitle">
-                <a href="/HeroSighting/location/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-location">Locations</span></a></li>
+                <a href="/location/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-location">Locations</span></a></li>
             <li class="headingTitle">
-                <a href="/HeroSighting/superpower/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-power">Super Powers</span></a></li>
+                <a href="/superpower/display"><i class="fas fa-chevron-right caret" style="display:none"></i><span class="home-title home-power">Super Powers</span></a></li>
         </ul>
 
     </div>
